# OmnisLoader

./: .gitignore  LICENSE  main.py  pyproject.toml
core/: base.py  base_download_config.py  base_downloader.py  base_downloading_config.py
downloader/: download_playlist.py  download_single_track.py  web.py  yandex.py
downloading/: download_playlist.py  download_single_track.py
services/: download_config.py  logger.py  web_download_config.py  yandex_download_config.py
