[project]
name = "notebooklm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "dotenv>=0.9.9",
    "requests>=2.32.5",
    "selenium>=4.41.0",
    "webdriver-manager>=4.0.2",
    "yandex-music>=2.2.0",
    "yt-dlp>=2026.3.17",
    "yt-dlp-ejs>=0.8.0",
]
