[project]
name = "OmnisLoader"
version = "1.0.0"
description = "OmnisLoader is a Python script that can load anything from various sources and save it to your local machine."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "dotenv>=0.9.9",
    "requests>=2.32.5",
    "yandex-music>=2.2.0",
    "yt-dlp>=2026.3.17",
    "yt-dlp-ejs>=0.8.0",
]
